# Broker.IA

./: README.md  app.py  pyproject.toml  replit.nix
attached_assets/: Pasted-Connection-failed-with-status-503-and-response-DOCTYPE-html-html-lang-en-head-title-The--1742242910505.txt  Pasted-streamlit-errors-StreamlitDuplicateElementId-There-are-multiple-button-elements-with-the-same-auto--1742899326006.txt  Pasted-streamlit-errors-StreamlitDuplicateElementId-There-are-multiple-text-input-elements-with-the-same-a-1742898890789.txt  Pasted-streamlit-runtime-caching-cache-errors-UnhashableParamError-Cannot-hash-argument-self-of-type-ut-1742242012915.txt
utils/: advertising.py  ai_advisor.py  alert_manager.py  api_integrations.py  auth.py  broker_compatibility.py  broker_integration.py  data_aggregator.py  donations.py  feedback.py  gamification.py  launch_manager.py  loading_screen.py  market_data.py  monetization.py  news.py  portfolio.py  recommendation_engine.py  report_generator.py  risk_profiler.py  timeline.py
